--- a/books/the-way-to-go_ZH_CN.yaml
+++ b/books/the-way-to-go_ZH_CN.yaml
@@ -28,3 +28,354 @@ description: |
 official: false
 # 教程版本号
 version: 1.1
+chapters:
+  - name: 前言
+    path: /eBook/preface.md
+  - name: 1. Go 语言的起源，发展与普及 
+    chapters:
+      - name: 1.1 起源与发展
+        path: /eBook/01.1.md
+      - name: 1.2 语言的主要特性与发展的环境和影响因素
+        path: /eBook/01.2.md
+  - name: 2. 安装与运行环境
+    chapters:
+      - name: 2.1 平台与架构
+        path: /eBook/02.1.md
+      - name: 2.2 Go 环境变量
+        path: /eBook/02.2.md
+      - name: 2.3 在 Linux 上安装 Go
+        path: /eBook/02.3.md
+      - name: 2.4 在 Mac OS X 上安装 Go
+        path: /eBook/02.4.md
+      - name: 2.5 在 Windows 上安装 Go
+        path: /eBook/02.5.md
+      - name: 2.6 安装目录清单
+        path: /eBook/02.6.md
+      - name: 2.7 Go 运行时（runtime）
+        path: /eBook/02.7.md
+      - name: 2.8 Go 解释器
+        path: /eBook/02.8.md
+  - name: 3. 编辑器、集成开发环境与其它工具
+    path: /eBook/03.0.md
+    chapters:
+      - name: 3.1 Go 开发环境的基本要求
+        path: /eBook/03.1.md
+      - name: 3.2 编辑器和集成开发环境
+        path: /eBook/03.2.md
+      - name: 3.3 调试器
+        path: /eBook/03.3.md
+      - name: 3.4 构建并运行 Go 程序
+        path: /eBook/03.4.md
+      - name: 3.5 格式化代码
+        path: /eBook/03.5.md
+      - name: 3.6 生成代码文档
+        path: /eBook/03.6.md
+      - name: 3.7 其它工具
+        path: /eBook/03.7.md
+      - name: 3.8 Go 性能说明
+        path: /eBook/03.8.md
+      - name: 3.9 与其它语言进行交互
+        path: /eBook/03.9.md
+  - name: 4. 基本结构和基本数据类型
+    chapters:
+      - name: 4.1 文件名、关键字与标识符
+        path: /eBook/04.1.md
+      - name: 4.2 Go 程序的基本结构和要素
+        path: /eBook/04.2.md
+      - name: 4.3 常量
+        path: /eBook/04.3.md
+      - name: 4.4 变量
+        path: /eBook/04.4.md
+      - name: 4.5 基本类型和运算符
+        path: /eBook/04.5.md
+      - name: 4.6 字符串
+        path: /eBook/04.6.md
+      - name: 4.7 strings 和 strconv 包
+        path: /eBook/04.7.md
+      - name: 4.8 时间和日期
+        path: /eBook/04.8.md
+      - name: 4.9 指针
+        path: /eBook/04.9.md
+  - name: 5. 控制结构
+    path: /eBook/05.0.md
+    chapters:
+      - name: 5.1 if-else 结构
+        path: /eBook/05.1.md
+      - name: 5.2 测试多返回值函数的错误
+        path: /eBook/05.2.md
+      - name: 5.3 switch 结构
+        path: /eBook/05.3.md
+      - name: 5.4 for 结构
+        path: /eBook/05.4.md
+      - name: 5.5 Break 与 continue
+        path: /eBook/05.5.md
+      - name: 5.6 标签与 goto
+        path: /eBook/05.6.md
+  - name: 6. 函数（function）
+    path: /eBook/06.0.md
+    chapters:
+      - name: 6.1 介绍
+        path: /eBook/06.1.md
+      - name: 6.2 函数参数与返回值
+        path: /eBook/06.2.md
+      - name: 6.3 传递变长参数
+        path: /eBook/06.3.md
+      - name: 6.4 defer 和追踪
+        path: /eBook/06.4.md
+      - name: 6.5 内置函数
+        path: /eBook/06.5.md
+      - name: 6.6 递归函数
+        path: /eBook/06.6.md
+      - name: 6.7 将函数作为参数
+        path: /eBook/06.7.md
+      - name: 6.8 闭包
+        path: /eBook/06.8.md
+      - name: 6.9 应用闭包：将函数作为返回值
+        path: /eBook/06.9.md
+      - name: 6.10 使用闭包调试
+        path: /eBook/06.10.md
+      - name: 6.11 计算函数执行时间
+        path: /eBook/06.11.md
+      - name: 6.12 通过内存缓存来提升性能
+        path: /eBook/06.12.md
+  - name: 7. 数组与切片
+    path: /eBook/07.0.md
+    chapters:
+      - name: 7.1 声明和初始化
+        path: /eBook/07.1.md
+      - name: 7.2 切片
+        path: /eBook/07.2.md
+      - name: 7.3 For-range 结构
+        path: /eBook/07.3.md
+      - name: 7.4 切片重组（reslice）
+        path: /eBook/07.4.md
+      - name: 7.5 切片的复制与追加
+        path: /eBook/07.5.md
+      - name: 7.6 字符串、数组和切片的应用
+        path: /eBook/07.6.md
+  - name: 8. Map
+    path: /eBook/08.0.md
+    chapters:
+      - name: 8.1 声明、初始化和 make
+        path: /eBook/08.1.md
+      - name: 8.2 测试键值对是否存在及删除元素
+        path: /eBook/08.2.md
+      - name: 8.3 for-range 的配套用法
+        path: /eBook/08.3.md
+      - name: 8.4 map 类型的切片
+        path: /eBook/08.4.md
+      - name: 8.5 map 的排序
+        path: /eBook/08.5.md
+      - name: 8.6 将 map 的键值对调
+        path: /eBook/08.6.md
+  - name: 9. 包（package）
+    path: /eBook/09.0.md
+    chapters:
+      - name: 9.1 标准库概述
+        path: /eBook/09.1.md
+      - name: 9.2 regexp 包
+        path: /eBook/09.2.md
+      - name: 9.3 锁和 sync 包
+        path: /eBook/09.3.md
+      - name: 9.4 精密计算和 big 包
+        path: /eBook/09.4.md
+      - name: 9.5 自定义包和可见性
+        path: /eBook/09.5.md
+      - name: 9.6 为自定义包使用 godoc
+        path: /eBook/09.6.md
+      - name: 9.7 使用 go install 安装自定义包
+        path: /eBook/09.7.md
+      - name: 9.8 自定义包的目录结构、go install 和 go test
+        path: /eBook/09.8.md
+      - name: 9.9 通过 Git 打包和安装
+        path: /eBook/09.9.md
+      - name: 9.10 Go 的外部包和项目
+        path: /eBook/09.10.md
+      - name: 9.11 在 Go 程序中使用外部库
+        path: /eBook/09.11.md
+  - name: 10. 结构（struct）与方法（method）
+    path: /eBook/10.0.md
+    chapters:
+      - name: 10.1 结构体定义
+        path: /eBook/10.1.md
+      - name: 10.2 使用工厂方法创建结构体实例
+        path: /eBook/10.2.md
+      - name: 10.3 使用自定义包中的结构体
+        path: /eBook/10.3.md
+      - name: 10.4 带标签的结构体
+        path: /eBook/10.4.md
+      - name: 10.5 匿名字段和内嵌结构体
+        path: /eBook/10.5.md
+      - name: 10.6 方法
+        path: /eBook/10.6.md
+      - name: 10.7 类型的 String() 方法和格式化描述符
+        path: /eBook/10.7.md
+      - name: 10.8 垃圾回收和 SetFinalizer
+        path: /eBook/10.8.md
+  - name: 11. 接口（interface）与反射（reflection）
+    path: /eBook/11.0.md
+    chapters:
+      - name: 11.1 接口是什么
+        path: /eBook/11.1.md
+      - name: 11.2 接口嵌套接口
+        path: /eBook/11.2.md
+      - name: 11.3 类型断言：如何检测和转换接口变量的类型
+        path: /eBook/11.3.md
+      - name 11.4 类型判断：type-switch
+        path: /eBook/11.4.md
+      - name: 11.5 测试一个值是否实现了某个接口
+        path: /eBook/11.5.md
+      - name: 11.6 使用方法集与接口
+        path: /eBook/11.6.md
+      - name: 11.7 第一个例子：使用 Sorter 接口排序
+        path: /eBook/11.7.md
+      - name: 11.8 第二个例子：读和写
+        path: /eBook/11.8.md
+      - name: 11.9 空接口
+        path: /eBook/11.9.md
+      - name: 11.10 反射包
+        path: /eBook/11.10.md
+      - name: 11.11 Printf 和反射
+        path: /eBook/11.11.md
+      - name: 11.12 接口与动态类型
+        path: /eBook/11.12.md
+      - name: 11.13 总结：Go 中的面向对象
+        path: /eBook/11.13.md
+      - name: 11.14 结构体、集合和高阶函数
+        path: /eBook/11.14.md
+  - name: 12. 读写数据
+    path: /eBook/12.0.md
+    chapters:
+      - name: 12.1 读取用户的输入
+        path: /eBook/12.1.md
+      - name: 12.2 文件读写
+        path: /eBook/12.2.md
+      - name: 12.3 文件拷贝
+        path: /eBook/12.3.md
+      - name: 12.4 从命令行读取参数
+        path: /eBook/12.4.md
+      - name: 12.5 用 buffer 读取文件
+        path: /eBook/12.5.md
+      - name: 12.6 用切片读写文件
+        path: /eBook/12.6.md
+      - name: 12.7 用 defer 关闭文件
+        path: /eBook/12.7.md
+      - name: 12.8 使用接口的实际例子：fmt.Fprintf
+        path: /eBook/12.8.md
+      - name: 12.9 格式化 JSON 数据
+        path: /eBook/12.9.md
+      - name: 12.10 XML 数据格式
+        path: /eBook/12.10.md
+      - name: 12.11 用 Gob 传输数据
+        path: /eBook/12.11.md
+      - name: 12.12 Go 中的密码学
+        path: /eBook/12.12.md
+  - name: 13. 错误处理与测试
+    path: /eBook/13.0.md
+    chapters:
+      - name: 13.1 错误处理
+        path: /eBook/13.1.md
+      - name: 13.2 运行时异常和 panic
+        path: /eBook/13.2.md
+      - name: 13.3 从 panic 中恢复（Recover）  
+        path: /eBook/13.3.md
+      - name: 13.4 自定义包中的错误处理和 panicking
+        path: /eBook/13.4.md
+      - name: 13.5 一种用闭包处理错误的模式
+        path: /eBook/13.5.md
+      - name: 13.6 启动外部命令和程序
+        path: /eBook/13.6.md
+      - name: 13.7 Go 中的单元测试和基准测试
+        path: /eBook/13.7.md
+      - name: 13.8 测试的具体例子
+        path: /eBook/13.8.md
+      - name: 13.9 用（测试数据）表驱动测试
+        path: /eBook/13.9.md
+      - name: 13.10 性能调试：分析并优化 Go 程序
+        path: /eBook/13.10.md
+  - name: 14. 协程（goroutine）与通道（channel）
+    path: /eBook/14.0.md
+    chapters:
+      - name: 14.1 并发、并行和协程
+        path: /eBook/14.1.md
+      - name: 14.2 使用通道进行协程间通信
+        path: /eBook/14.2.md
+      - name: 14.3 协程同步：关闭通道-对阻塞的通道进行测试
+        path: /eBook/14.3.md
+      - name: 14.4 使用 select 切换协程
+        path: /eBook/14.4.md
+      - name: 14.5 通道，超时和计时器（Ticker）
+        path: /eBook/14.5.md
+      - name: 14.6 协程和恢复（recover）  
+        path: /eBook/14.6.md
+      - name: 14.7 新旧模型对比：任务和worker
+        path: /eBook/14.7.md
+      - name: 14.8 惰性生成器的实现
+        path: /eBook/14.8.md
+      - name:  14.9 惰性生成器的实现
+        path: /eBook/14.9.md
+  - name: 15. 网络、模版与网页应用
+    path: /eBook/15.0.md
+    chapters:
+      - name: 15.1 tcp服务器
+        path: /eBook/15.1.md
+      - name: 15.2 一个简单的web服务器
+        path: /eBook/15.2.md
+      - name: 15.3 访问并读取页面数据
+        path: /eBook/15.3.md
+      - name: 15.4 写一个简单的网页应用  
+        path: /eBook/15.4.md
+  - name: 16. 常见的陷阱与错误
+    path: /eBook/16.0.md
+    chapters:
+      - name: 16.1 误用短声明导致变量覆盖
+        path: /eBook/16.1.md
+      - name: 16.2 误用字符串
+        path: /eBook/16.2.md
+      - name: 16.3 发生错误时使用defer关闭一个文件
+        path: /eBook/16.3.md
+      - name: 16.4 何时使用new()和make()
+        path: /eBook/16.4.md
+      - name: 16.5 不需要将一个指向切片的指针传递给函数
+        path: /eBook/16.5.md
+      - name: 16.6 使用指针指向接口类型
+        path: /eBook/16.6.md
+      - name: 16.7 使用值类型时误用指针
+        path: /eBook/16.7.md
+      - name: 16.8 误用协程和通道
+        path: /eBook/16.8.md
+      - name: 16.9 闭包和协程的使用
+        path: /eBook/16.9.md
+      - name: 16.10 糟糕的错误处理
+        path: /eBook/16.10.md
+  - name: 17. 模式
+    path: /eBook/17.0.md
+    chapters:
+      - name: 17.1 关于逗号ok模式
+        path: /eBook/17.1.md
+  - name: 18. 出于性能考虑的实用代码片段
+    path: /eBook/18.0.md
+    chapters:
+      - name: 18.1 字符串
+        path: /eBook/18.1.md
+      - name: 18.2 数组和切片
+        path: /eBook/18.2.md
+      - name: 18.3 映射
+        path: /eBook/18.3.md
+      - name: 18.4 结构体
+        path: /eBook/18.4.md
+      - name: 18.5 接口
+        path: /eBook/18.5.md
+      - name: 18.6 函数
+        path: /eBook/18.6.md
+      - name: 18.7 文件
+        path: /eBook/18.7.md
+      - name: 18.8 协程（goroutine）与通道（channel）
+        path: /eBook/18.8.md
+      - name: 18.9 网络和网页应用 
+        path: /eBook/18.9.md
+      - name: 18.10 其他
+        path: /eBook/18.10.md
+      - name: 18.11 出于性能考虑的最佳实践和建议
+        path: /eBook/18.11.md
+      
