--- a/books/opencv_doc_cn.yaml
+++ b/books/opencv_doc_cn.yaml
@@ -29,3 +29,109 @@ description: |
 official: false
 # 教程版本号
 version: 1.1
+chapters:
+  - name: 1. 学习如何在你的电脑上配置OpenCV-Python环境！
+    path: /py_tutorials/py_setup/py_table_of_contents_setup_cn.markdown
+    chapters:
+      - name: 1.1 开始了解OpenCV-Python
+        path: /py_tutorials/py_setup/py_intro/py_intro_cn.markdown
+      - name: 1.2 在Windows下安装OpenCV-Python
+        path: /py_tutorials/py_setup/py_setup_in_windows/py_setup_in_windows_cn.markdown
+      - name: 1.3 在Fedora环境下安装OpenCV-Python
+        path: /py_tutorials/py_setup/py_setup_in_fedora/py_setup_in_fedora_cn.markdown
+      - name: 1.4 在Debian（Ubuntu）中配置OpenCV-Python
+        path: /py_tutorials/py_setup/py_setup_in_debian/py_setup_in_debian_cn.markdown
+      - name: 1.5 在Docker中安装OpenCV-Python
+        path: /py_tutorials/py_setup/py_setup_in_docker/py_setup_in_docker_cn.markdown
+      - name: 1.6 在树莓派配置OpenCV-Python
+        path: /py_tutorials/py_setup/py_setup_in_raspbian/py_setup_in_raspbian_cn.markdown
+  - name: 2. OpenCV中的GUI功能
+    path: /py_tutorials/py_gui/py_table_of_contents_gui_cn.markdown
+    chapters:
+      - name: 2.1 开始使用图像
+        path: /py_tutorials/py_gui/py_image_display/py_image_display_cn.markdown
+      - name: 2.2 开始使用视频
+        path: /py_tutorials/py_gui/py_video_display/py_video_display_cn.markdown
+      - name: 2.3 OpenCV中的绘图函数
+        path: /py_tutorials/py_gui/py_drawing_functions/py_drawing_functions_cn.markdown
+      - name: 2.4 以鼠标为画笔
+        path: /py_tutorials/py_gui/py_mouse_handling/py_mouse_handling_cn.markdown
+      - name: 2.5 用滑块控制条做调色板
+        path: /py_tutorials/py_gui/py_trackbar/py_trackbar_cn.markdown
+  - name: 3. OpenCV中的GUI功能
+    path: /py_tutorials/py_core/py_table_of_contents_core_cn.markdown
+    chapters:
+      - name: 3.1 图片基本操作
+        path: /py_tutorials/py_core/py_basic_ops/py_basic_ops_cn.markdown
+      - name: 3.2  图像算术操作
+        path: /py_tutorials/py_core/py_image_arithmetics/py_image_arithmetics_cn.markdown
+      - name: 3.3 性能评估与改进技巧
+        path: /py_tutorials/py_core/py_optimization/py_optimization_cn.markdown
+  - name: 4. OpenCV中的图像处理
+    path: /py_tutorials/py_imgproc/py_table_of_contents_imgproc_cn.markdown
+    chapters:
+      - name: 4.1 更换颜色空间
+        path: /py_tutorials/py_imgproc/py_colorspaces/py_colorspaces_cn.markdown
+      - name: 4.2 对图像进行几何变换
+        path: /py_tutorials/py_imgproc/py_geometric_transformations/py_geometric_transformations_cn.markdown
+      - name: 4.3 图像二值化处理
+        path: /py_tutorials/py_imgproc/py_thresholding/py_thresholding_cn.markdown
+      - name: 4.4 平滑图像
+        path: /py_tutorials/py_imgproc/py_filtering/py_filtering_cn.markdown
+      - name: 4.5 形态学转换
+        path: /py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops_cn.markdown
+      - name: 4.6 图像梯度
+        path: /py_tutorials/py_imgproc/py_gradients/py_gradients_cn.markdown
+      - name: 4.7 Canny边缘检测
+        path: /py_tutorials/py_imgproc/py_canny/py_canny_cn.markdown
+      - name: 4.8 图像金字塔
+        path: /py_tutorials/py_imgproc/py_pyramids/py_pyramids_cn.markdown
+      - name: 4.9 OpenCV中的直方图
+        path: /py_tutorials/py_imgproc/py_histograms/py_table_of_contents_histograms_cn.md
+        chapters:
+          - name: 4.9.1 直方图：查找，绘制，分析！
+            path: /py_tutorials/py_imgproc/py_histograms/py_histogram_begins/py_histogram_begins_cn.markdown
+          - name: 4.9.2 直方图均衡化
+            path: /py_tutorials/py_imgproc/py_histograms/py_histogram_equalization/py_histogram_equalization_cn.markdown
+          - name: 4.9.3 二维直方图
+            path: /py_tutorials/py_imgproc/py_histograms/py_2d_histogram/py_2d_histogram_cn.markdown
+          - name: 4.9.4 直方图反投影
+            path: /py_tutorials/py_imgproc/py_histograms/py_histogram_backprojection/py_histogram_backprojection_cn.markdown
+      - name: 4.10 OpenCV中的图像变换 
+        path: /py_tutorials/py_imgproc/py_transforms/py_table_of_contents_transforms_cn.markdown
+        chapters:
+          - name: 4.10.1 傅立叶变换
+            path: /py_tutorials/py_imgproc/py_transforms/py_fourier_transform/py_fourier_transform_cn.markdown
+      - name: 4.11 模板匹配
+        path: /py_tutorials/py_imgproc/py_template_matching/py_template_matching_cn.markdown
+      - name: 4.12 霍夫直线变换
+        path: /py_tutorials/py_imgproc/py_houghlines/py_houghlines_cn.markdown
+      - name: 4.13 霍夫圆变换
+        path: /py_tutorials/py_imgproc/py_houghcircles/py_houghcircles_cn.markdown
+      - name: 4.14 基于分水岭算法的图像分割
+        path: /py_tutorials/py_imgproc/py_watershed/py_watershed_cn.markdown
+      - name: 4.14 使用GrabCut算法交互式前景提取
+        path: /py_tutorials/py_imgproc/py_grabcut/py_grabcut_cn.markdown
+  - name: 5. 特征检测和描述符 
+    path: /py_tutorials/py_feature2d/py_table_of_contents_feature2d_cn.markdown
+    chapters:
+      - name: 5.1 理解特征
+        path: /py_tutorials/py_feature2d/py_features_meaning/py_features_meaning_cn.markdown
+      - name: 5.2 Harris角点检测
+        path: /py_tutorials/py_feature2d/py_features_harris/py_features_harris_cn.markdown
+      - name: 5.3 Shi-Tomasi 角点检测 & 适合用来跟踪的特征
+        path: /py_tutorials/py_feature2d/py_shi_tomasi/py_shi_tomasi_cn.markdown
+      - name: 5.4 介绍SIFT（尺度不变特征转换）
+        path: /py_tutorials/py_feature2d/py_sift_intro/py_sift_intro_cn.markdown
+      - name: 5.5 介绍SURF（加速稳健特征）
+        path: /py_tutorials/py_feature2d/py_surf_intro/py_surf_intro_cn.markdown
+      - name: 5.6 角点检测的FAST算法
+        path: /py_tutorials/py_feature2d/py_fast/py_fast_cn.markdown
+      - name: 5.7 BRIEF特征点描述算法
+        path: /py_tutorials/py_feature2d/py_brief/py_brief_cn.markdown
+      - name: 5.8 ORB特征描述符(Oriented FAST and Rotated BRIEF) 
+        path: /py_tutorials/py_feature2d/py_orb/py_orb_cn.markdown
+      - name: 5.9 特征匹配
+        path: /py_tutorials/py_feature2d/py_matcher/py_matcher_cn.markdown
+      - name: 5.10 特征匹配和使用单应性匹配来搜索物体
+        path: /py_tutorials/py_feature2d/py_feature_homography/py_feature_homography_cn.markdown
