--- a/books/NCCL.yaml
+++ b/books/NCCL.yaml
@@ -43,7 +43,7 @@ chapters:
     path: /Unit-1/Lesson-4.md
   - name: Lesson 5 - 从1加到100求和  
     path: /Unit-1/Lesson-5.md
-  - name：Lesson 6 - 乘法表
+  - name: Lesson 6 - 乘法表
     path: /Unit-1/Lesson-6.md
   - name: Lesson 7 - 求100以内的最大素数
     path: /Unit-1/Lesson-7.md
