--- a/books/the-way-to-go_ZH_CN.yaml
+++ b/books/the-way-to-go_ZH_CN.yaml
@@ -221,7 +221,7 @@ chapters:
         path: /eBook/11.2.md
       - name: 11.3 类型断言：如何检测和转换接口变量的类型
         path: /eBook/11.3.md
-      - name 11.4 类型判断：type-switch
+      - name: 11.4 类型判断：type-switch
         path: /eBook/11.4.md
       - name: 11.5 测试一个值是否实现了某个接口
         path: /eBook/11.5.md
