--- a/books/git-recipes.yaml
+++ b/books/git-recipes.yaml
@@ -7,7 +7,7 @@ slug: git-recipes
 topic: 其他技术
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - git
+  - Git
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: geeeeeeeeek/git-recipes
 # 技术教程所在的 git 仓库地址目录
