--- a/index_config.yaml
+++ b/index_config.yaml
@@ -119,6 +119,8 @@ nav:
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/MongoDB.png
       - name: Redis
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Redis.png
+      - name: Influxdb
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Default.png
   - topic: 移动开发
     tags:
       - name: Android
@@ -161,6 +163,8 @@ nav:
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/ROS.png
       - name: Windows
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Windows.png
+      - name: Git
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Git.png
 
 # 内容块配置
 # 技术教程首页内容由若干个块组成，每一个块包含一个技术方向及其指定的教程
@@ -168,12 +172,16 @@ blocks:
   - topic: 后端开发
     books:
       - C++并发编程
+      - JavaWeb入门开发教程
       - Gradle实战中文版
       - 新概念C语言
       - Go命令教程
       - php扩展开发及内核应用
       - php开发者实践
+      - PHP进阶教程
       - Go入门指南
+      - Node.js 教程
+      - Sanic使用教程
       - twisted与异步编程入门
       - Python3 Cookbook
       - Django源码小剖
@@ -184,23 +192,30 @@ blocks:
       - Julia中文文档
       - rails实践
       - Java并发知识点总结
+      - Elasticsearch权威指南中文版
   - topic: Web前端
     books:
       - CSS3教程
       - 前端开发者手册
       - javascript导学
+      - 前端入门和进阶学习笔记
       - webpack中文指南
       - TypeScript使用手册
       - Gulp入门指南
       - ECMAScript 6入门
+      - Redux简明教程
       - Redux中文文档
   - topic: Linux运维
     books:
       - 快乐的 Linux 命令行
+      - Prometheus手册
       - 理解Linux进程
       - 像IDE一样实验Vim
+      - Vim 实操教程
       - Linux工具快速教程
       - OpenResty最佳实践
+      - Http API设计指南
+      - Http接口设计指北
   - topic: 云计算与数据分析
     books:
       - 18个经典数据挖掘算法实现
@@ -212,6 +227,7 @@ blocks:
   - topic: 数据库
     books:
       - MongoDB小书
+      - influxdb 简明教程
       - 使用Express+MongoDB搭建多人博客
   - topic: 其他技术
     books:
@@ -220,3 +236,5 @@ blocks:
       - 数据结构与算法/leetcode/lintcode题解
       - 程序员的自我修养
       - Go Ethereum
+      - git菜单
+      - gitlab-ci官方文档翻译
