--- a/books/php-book.yaml
+++ b/books/php-book.yaml
@@ -149,7 +149,7 @@ chapters:
       - name: 10.4 类的继承与接口的实现
         path: /10.4.md
       - name: 10.5 小结
-        path: /10.5 小结
+        path: /10.5.md
   - name: 11. PHP中的面向对象（二） 
     path: /11.md
     chapters:
