--- a/books/advanced-go-programming-book.yaml
+++ b/books/advanced-go-programming-book.yaml
@@ -20,7 +20,7 @@ author:
   name: 柴树杉
   email: 
   # github 主页地址
-  github: github.com/howie6879
+  github: github.com/chai2010
   blog: https://chai2010.cn/about
 # 描述信息
 description: |
