--- a/index_config.yaml
+++ b/index_config.yaml
@@ -194,6 +194,7 @@ blocks:
       - Elasticsearch权威指南中文版
       - Java 学习+面试指南
       - Go语言高级编程
+      - 关于Python的面试题
   - topic: Web前端
     books:
       - CSS3教程
