--- a/books/Algorithm-Interview-Notes-Chinese.yaml
+++ b/books/Algorithm-Interview-Notes-Chinese.yaml
@@ -126,6 +126,7 @@ chapters:
       - name: C++中的左值与右值
         path: /C-编程语言/Cpp-C-左值与右值.md
   - name: 笔试面经
+    chapters:
       - name: 笔试-360-180827
         path: /D-笔试面经/笔试-360-180827.md
       - name: 笔试-iHandy-180927
