--- a/index_config.yaml
+++ b/index_config.yaml
@@ -195,7 +195,7 @@ blocks:
       - Java 学习+面试指南
       - Go语言高级编程
       - 关于Python的面试题
-      - What the f**k Python!
+      - What the f**k Python
   - topic: Web前端
     books:
       - CSS3教程
