--- a/index_config.yaml
+++ b/index_config.yaml
@@ -221,6 +221,7 @@ blocks:
       - Http API设计指南
       - Http接口设计指北
       - Shell 编程范例
+      - Vim 从入门到精通
   - topic: 云计算与数据分析
     books:
       - 神经网络与深度学习
