--- a/index_config.yaml
+++ b/index_config.yaml
@@ -198,6 +198,7 @@ blocks:
       - What the f**k Python
       - C语言编程透视
       - 互联网 Java 工程师进阶知识完全扫盲
+      - Python 数据结构
   - topic: Web前端
     books:
       - CSS3教程
