--- a/index_config.yaml
+++ b/index_config.yaml
@@ -223,6 +223,7 @@ blocks:
       - Http接口设计指北
       - Shell 编程范例
       - Vim 从入门到精通
+      - 命令行的艺术
   - topic: 云计算与数据分析
     books:
       - 神经网络与深度学习
