--- a/index_config.yaml
+++ b/index_config.yaml
@@ -199,6 +199,7 @@ blocks:
       - C语言编程透视
       - 互联网 Java 工程师进阶知识完全扫盲
       - Python 数据结构
+      - PHP面试问答
   - topic: Web前端
     books:
       - CSS3教程
