--- a/index_config.yaml
+++ b/index_config.yaml
@@ -234,6 +234,7 @@ blocks:
       - kubernetes完全教程
       - 算法/深度学习/NLP面试笔记
       - 机器学习基础
+      - 动手学深度学习
   - topic: 数据库
     books:
       - MongoDB小书
