--- a/books/GSYFlutterBook.yaml
+++ b/books/GSYFlutterBook.yaml
@@ -4,10 +4,10 @@
 name: Flutter完整开发实战  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: GSYFlutterBook
-topic: Linux运维
+topic: 移动开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - 网络
+  - Android
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: CarGuo/GSYFlutterBook
 # 技术教程所在的 git 仓库地址目录
