--- a/index_config.yaml
+++ b/index_config.yaml
@@ -225,6 +225,7 @@ blocks:
       - Shell 编程范例
       - Vim 从入门到精通
       - 命令行的艺术
+      - http2讲解
   - topic: 云计算与数据分析
     books:
       - 神经网络与深度学习
