--- a/index_config.yaml
+++ b/index_config.yaml
@@ -241,7 +241,7 @@ blocks:
       - MongoDB小书
       - influxdb 简明教程
       - 使用Express+MongoDB搭建多人博客
-  - topic: 数据库
+  - topic: 移动开发
     books:
       - Flutter完整开发实战
   - topic: 其他技术
