--- a/books/JavaGuide.yaml
+++ b/books/JavaGuide.yaml
@@ -73,8 +73,12 @@ chapters:
             path: /docs/java/jvm/JVM垃圾回收.md
           - name: JDK 监控和故障处理工具
             path: /docs/java/jvm/JDK监控和故障处理工具总结.md
-          - name: 《深入理解Java虚拟机》第2版学习笔记
-            path: /docs/java/Java虚拟机（jvm）.md
+          - name: 类加载器
+            path: /docs/java/jvm/类加载器.md
+          - name: 类加载过程
+            path: /docs/java/jvm/类加载过程.md
+          - name: 类文件结构
+            path: /docs/java/jvm/类文件结构.md          
       - name: I/O
         chapters:
           - name: BIO,NIO,AIO 总结
@@ -159,12 +163,16 @@ chapters:
             path: /docs/system-design/设计模式.md
       - name: 常用框架之 Spring
         chapters:
-          - name: Spring 学习与面试
-            path: /docs/system-design/framework/Spring学习与面试.md
-          - name: Spring中bean的作用域与生命周期
-            path: /docs/system-design/framework/SpringBean.md
-          - name: SpringMVC 工作原理详解
-            path: /docs/system-design/framework/SpringMVC 工作原理详解.md
+          - name: Spring 设计模式
+            path: /docs/system-design/framework/spring/Spring-Design-Patterns.md
+          - name: Spring 相关教程
+            path: /docs/system-design/framework/spring/Spring.md
+          - name: Spring Bean
+            path: /docs/system-design/framework/spring/SpringBean.md
+          - name: Spring 面试总结
+            path: /docs/system-design/framework/spring/SpringInterviewQuestions.md
+          - name: Spring MVC
+            path: /docs/system-design/framework/spring/SpringMVC-Principle.md
       - name: 常用框架之 ZooKeeper
         chapters:
           - name: ZooKeeper 相关概念总结
@@ -173,14 +181,16 @@ chapters:
             path: /docs/system-design/framework/ZooKeeper数据模型和常见命令.md
       - name: 数据通信
         chapters:
-          - name: 数据通信(RESTful、RPC、消息队列)相关知识点总结
-            path: /docs/system-design/data-communication/数据通信(RESTful、RPC、消息队列).md
+          - name: 消息中心
+            path: /docs/system-design/data-communication/RocketMQ-Questions.md
           - name: Dubbo 总结：关于 Dubbo 的重要知识点
             path: /docs/system-design/data-communication/dubbo.md
           - name: 消息队列总结
             path: /docs/system-design/data-communication/message-queue.md
           - name: RabbitMQ 的重要概念以及安装
             path: /docs/system-design/data-communication/rabbitmq.md
+          - name: RPC
+            path: /docs/system-design/data-communication/summary.md
       - name: 网站架构
         chapters:
           - name: 一文读懂分布式应该学什么
