--- a/index_config.yaml
+++ b/index_config.yaml
@@ -202,6 +202,7 @@ blocks:
       - 互联网 Java 工程师进阶知识完全扫盲
       - Python 数据结构
       - PHP面试问答
+      - Python 进阶
   - topic: Web前端
     books:
       - CSS3教程
